deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-app
  namespace: default
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: argocd-app
  template:
    metadata:
      labels:
        app: argocd-app
    spec:
      containers:
        - name: react-container
          image: varshinipathivada20/argocd-app:v1  
          ports:
            - containerPort: 3000
