service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-app-service
  namespace: default
spec:
  selector:
    app: argocd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
