route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-app-route
  namespace: default
spec:
  to:
    kind: Service
    name: argocd-app-service  
  port:
    targetPort: 3000
  tls:
    termination: edge  
  wildcardPolicy: None
